fixed header spacing

--- a/css/style.css
+++ b/css/style.css
@@ -210,11 +210,11 @@ body {
   }
 
   .heading {
-    margin-top: 2rem;
+    margin-top: 4rem;
   }
 
   .toggle {
-    margin-bottom: 2rem;
+    margin-bottom: 4rem;
   }
 
   .cards {
